# TEG_2025_Agents

./: .gitignore  pyproject.toml
basic_agent/: 1. function_calling_openai.py  2. llm_with_tools.py  main.py  pyproject.toml
langgraph_studio/: main.py  pyproject.toml
langgraph_studio/multi-agent-react/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl
langgraph_studio/multi-tool-react/: .gitignore  agent.py
langgraph_studio/multi_tool_react/: langgraph.json  pyproject.toml
multi-agent/: main.py  pyproject.toml
multi-agent/multi-agent-react/: agent.py
multi-agent/multi-agent-react/.langgraph_api/: .langgraph_ops.pckl  .langgraph_retry_counter.pckl
multi-agent/multi_agent_react/: pyproject.toml
react_agents/: README.md  arxiv_agent.py  main.py  math_agent.py  pyproject.toml  tavily_agent.py  weather_agent.py  wikipedia_agent.py
