[project]
name = "agents"
version = "0.1.0"
description = "LLM based agents - codebase supportin TEG 2025 Lectures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
]

[tool.uv.workspace]
members = [
    "react_agents",
    "basic_agent",
]
